# finch

./: .gitignore  AGENT_SERVER_PLAN.md  BACKGROUND_TRAINING_IMPLEMENTATION.md  BLOG.md  BUILD.md  CHANGELOG.md  CLAUDE.md  COMPILATION_STATUS.md  COREML_STATUS.md  Cargo.toml  FEEDBACK_COMMANDS_IMPLEMENTATION.md  INSTALLATION.md  LICENSE  PATTERN_PERSISTENCE_AND_NEURAL_ONLY_FIX.md  PHASE1_COMPLETE.md  PHASE2_STARTED.md  PHASE2_WIRING_PROGRESS.md  PHASE_4_LORA_PLACEHOLDERS.md  QWEN_INTEGRATION_COMPLETE.md  README.md  SESSION_SUMMARY.md  STATUS.md  TEACHER_CONFIG.md  TEACHER_CONTEXT_OPTIMIZATION.md  TERMINAL_UI_STATUS.md  UNIFIED_LOADER_PROGRESS.md  build.rs  install.sh  metal_error.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
data/: crisis_keywords.json  patterns.json
data/personas/: analyst.toml  autonomous.toml  creative.toml  default.toml  expert-coder.toml  researcher.toml  teacher.toml
docs/: ADAPTERS_VS_PROVIDERS.md  ANNOUNCEMENTS.md  ARCHITECTURE.md  AUTOMATIC_TRAINING.md  CONFIGURATION.md  DAEMON_MODE.md  DESIGN_TEMPLATE_PARSING.md  DEVELOPMENT.md  FILE_MANIFEST.md  FINCH_IMPLEMENTATION_SUMMARY.md  FIX_ONNX_OUTPUT_CLEANING.md  FIX_ROUTER_STATISTICS.md  GEMINI_IMPLEMENTATION.md  HN_POST.md  IMPLEMENTATION_PROGRESS.md  LLM_DIALOGS.md  MCP_ARCHITECTURE.md  MCP_USER_GUIDE.md  MEMTREE_CONSOLE.md  MODEL_BACKEND_STATUS.md  MULTI_PROVIDER_CONFIG.md  ONNX_MIGRATION_STATUS.md  PHASE_1_MULTI_LLM_COMPLETE.md  PHASE_2_FEATURES_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_3_GUI_COMPLETE.md  PHASE_4_MCP_PARTIAL.md  PROMPT_SUGGESTIONS.md  REDDIT_POST.md  RELEASE_READINESS_v0.5.0.md  ROADMAP.md  TOOL_CONFIRMATION.md  TRAINING_FRAMEWORK.md  TUI_ARCHITECTURE.md  TUI_CRASH_FIX_COMPLETE.md  UI_IMPROVEMENTS.md  USER_GUIDE.md
docs/archive/: AGENT_SERVER_PLAN.md  ALL_ERRORS_FIXED.md  ASKUSERQUESTION_INTEGRATION.md  BACKGROUND_FIX.md  BACKGROUND_TRAINING_IMPLEMENTATION.md  BUILD.md  CLAUDE_OLD.md  CONSTITUTIONAL_PROXY_SPEC.md  COREML_API_RESEARCH.md  COREML_MULTIBACKEND_ROADMAP.md  COREML_STATUS.md  DAEMON_SIDE_CLEANING_COMPLETE.md  DEPLOYMENT_VERIFICATION.md  DOCUMENTATION_CLEANUP_COMPLETE.md  FEEDBACK_COMMANDS_IMPLEMENTATION.md  FILE_MANIFEST.md  FINAL_TEST_SUMMARY.md  FIX_CORRUPTED_METRICS.md  FIX_CUSTOM_TEXT_INPUT.md  FIX_DIALOG_AND_PLAN_MODE_UI.md  FIX_GEMINI_MODEL.md  FIX_PLAN_MODE_EXIT.md  FIX_ROUTER_STATISTICS.md  FIX_SCROLLBACK_AND_DIALOGS.md  FIX_TOOL_PATTERNS_BUG.md  GEMINI_FIXES.md  GEMINI_IMPLEMENTATION.md  IMPROVEMENTS_COMPLETE.md  INIT.md  INSTALLATION.md  LOCAL_COMMAND_IMPLEMENTATION.md  MULTI_PROVIDER_IMPLEMENTATION.md  ONNX_MIGRATION_STATUS.md  OPENAI_FIXES.md  OUTPUT_REGRESSION_FIX.md  PATTERN_PERSISTENCE_AND_NEURAL_ONLY_FIX.md  PHASE1_AGENT_SERVER_COMPLETE.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_IMPLEMENTATION_COMPLETE.md  (+39 more)
examples/: comprehensive_test.rs  debug_matcher.rs  global_output_demo.rs  hybrid_demo.rs  metal_benchmark.rs  model_download_demo.rs  pattern_demo.rs  phase1_demo.rs  phase2_training.rs  qwen_integration_demo.rs  simple_query.rs  test_neural_generation.rs  test_shift_enter.rs  threshold_demo.rs  tool_confirmation_demo.rs  tool_execution_demo.rs
schema/: finch_ipc.capnp
scripts/: demo_boot.sh  install.sh  issue_license.py  migrate_status_to_issues.py  rename_to_finch.sh  test_persistence.sh  test_server.sh  test_tool_passthrough.sh  test_tui_debug.sh
src/: errors.rs  lib.rs  main.rs  peer_token.rs
src/agent/: activity_log.rs  backlog.rs  mod.rs  reflection.rs
src/brain/: action.rs  ask_user.rs  daemon_brain.rs  mod.rs
src/claude/: client.rs  client.rs.bak  mod.rs  retry.rs  streaming.rs  types.rs  types.rs.backup
src/cli/: command_autocomplete.rs  commands.rs  conversation.rs  conversation_compactor.rs  global_output.rs  input.rs  llm_dialogs.rs  memtree_console.rs  menu.rs  mod.rs  output_layer.rs  output_manager.rs  repl.rs  setup_wizard.rs  simple_repl.rs  status_bar.rs  suggestions.rs
src/client/: daemon_client.rs
src/coforth/: english_library.toml  generator.rs  interpreter.rs  library.rs  mod.rs  scatter.rs
src/config/: backend.rs  colors.rs  constants.rs  loader.rs  mod.rs  persona.rs  provider.rs  settings.rs
src/context/: claude_md.rs  mod.rs
src/crisis/: detector.rs  mod.rs
src/daemon/: lifecycle.rs  spawn.rs
src/feedback/: mod.rs
src/generators/: claude.rs  mod.rs  qwen.rs
src/graph/: mod.rs
src/ipc/: client.rs  mod.rs  (+3 more)
tests/: README.md  adapter_streaming_test.rs  conversation_logging_test.rs  daemon_integration_test.rs  fallback_chain_test.rs  gemini_streaming_test.rs  integration_test.rs  live.rs  llm_tools_test.rs  load_test.rs  lora_training_test.rs  mcp_integration_test.rs  memory_integration_test.rs  persona_integration_test.rs  provider_config_test.rs  router_persistence_test.rs  server_test.rs  service_discovery_test.rs  simple_forward_test.rs  tabbed_dialog_test.rs  todo_tools_test.rs  tool_integration_test.rs  training_test.rs  tui_integration_test.rs  tui_layout_test.rs  worker_integration_test.rs
vocabulary/: en.toml  zh.toml
web/: .env.local.example  package-lock.json  package.json
(+181 files in other folders)
